Fix too much padding + text not wrapping - mobile

--- a/myrecipe/static/css/style.css
+++ b/myrecipe/static/css/style.css
@@ -135,10 +135,6 @@ form > .input-field textarea:not(.browser-default):focus:not([readonly])+label {
 
 /* Profile */
 
-#profile-form {
-    padding: 2em;
-}
-
 #profile-form_update-password {
     font-size: 1.5em;
     margin-bottom: 1.2em;
@@ -204,7 +200,6 @@ i.right.arrow-dropdown-icon {
     margin-left: auto;
 }
 
-
 #account-options-title {
     padding: 0 32px;
     display: flex;
@@ -223,6 +218,12 @@ span.login-btn {
 #mobile-sidenav #account-dropdown_menu {
     width: 80%;
     margin: auto;
+}
+
+@media screen and (min-width: 600px) {
+    #profile-form {
+        padding: 2em;
+    }
 }
 
 /* End of Navbar */
@@ -579,6 +580,7 @@ p#created-by {
     font-family: "Karla", sans-serif;
     font-weight: 500;
     display: inline-flex;
+    flex-wrap: wrap;
 }
 
 .recipe-card_title>span.recipe-title {
